Fix z-index function name to level

--- a/abstracts/_function.scss
+++ b/abstracts/_function.scss
@@ -8,6 +8,6 @@
 }
 
 // z-index
-@function z($layer) {
+@function level($layer) {
   @return map-get($z-layers, $layer);
 }
